--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "altair>=5.5.0",
     "geopandas>=1.1.1",
+    "ipython>=9.6.0",
     "marimo>=0.17.5",
     "matplotlib>=3.10.7",
     "networkx>=3.5",
