--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "marimo>=0.17.5",
     "matplotlib>=3.10.7",
     "networkx>=3.5",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "plotly>=6.3.1",
     "polars>=1.35.1",
