--- a/src/elexon/config.yaml
+++ b/src/elexon/config.yaml
@@ -1,6 +1,6 @@
 from_time: "2025-01-01T00:00:00Z"
 to_time: "2025-10-29T00:00:00Z"
-downsample_frequency: "15m"
+downsample_frequency: "7d"
 units:
   - T_ACHRW-1
   - T_AFTOW-1
