--- a/src/elexon/config.yaml
+++ b/src/elexon/config.yaml
@@ -1,6 +1,7 @@
 from_time: "2024-01-01T00:00:00Z"
 to_time: "2025-01-01T00:00:00Z"
 downsample_frequency: "30m"
+energy_unit: "MWh"
 units:
 # - T_ACHRW-1
 # - T_AFTOW-1
