--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "altair>=5.5.0",
+    "anthropic>=0.75.0",
     "auto-mix-prep>=0.2.0",
     "geopandas>=1.1.1",
     "ipython>=9.6.0",
