--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiohttp>=3.13.2",
     "altair>=5.5.0",
     "anthropic>=0.75.0",
     "auto-mix-prep>=0.2.0",
