--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "tabulate>=0.9.0",
     "typer>=0.20.0",
     "utm>=0.8.1",
+    "vegafusion>=2.0.3",
+    "vl-convert-python>=1.9.0",
 ]
 
 
