--- a/src/elexon/config.yaml
+++ b/src/elexon/config.yaml
@@ -1,7 +1,8 @@
-from_time: "2021-01-01T00:00:00Z"
-to_time: "2022-01-01T00:00:00Z"
+from_time: "2024-01-01T00:00:00Z"
+to_time: "2025-01-01T00:00:00Z"
 downsample_frequency: "30m"
 energy_unit: "MWh"
+retry_empty: true
 units:
 - E_ABERDARE
 - T_ABRBO-1
